@@ -27,7 +27,7 @@
             <groupId>jakarta.platform</groupId>
             <artifactId>jakarta.jakartaee-api</artifactId>
             <version>${version.jakarta.platform}</version>
-            <scope>jar</scope>
+            <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
@@ -166,67 +166,57 @@
                 <artifactId>maven-antrun-plugin</artifactId>
                 <version>1.8</version>
                 <executions>
-
-                    <!-- make dist folder -->
+                    <!-- make jre antrun:run@jre -->
                     <execution>
-                        <phase>install</phase>
-                        <goals>
-                            <goal>run</goal>
-                        </goals>
+                        <id>jre</id>
                         <configuration>
-                            <target name="bundle">
-                                <!-- Obtain path to the selected JRE -->
-                                <exec executable="/usr/libexec/java_home"
-                                      failonerror="true"
-                                      outputproperty="runtime">
-                                    <arg value="-v"/>
-                                    <arg value="${java.version}"/>
+                            <tasks>
+                                <echo>making jre using jlink</echo>
+                                <property name="jredir" value="${basedir}/appRuntimeImage/jre" />
+                                <delete dir="${jredir}" />
+                                <exec executable="/usr/bin/jlink">
+                                    <arg value="--no-header-files" />
+                                    <arg value="--no-man-pages" />
+                                    <arg value="--strip-debug" />
+                                    <arg value="--compress=2" />
+                                    <arg line="--add-modules java.base,java.desktop,java.datatransfer,java.naming,java.prefs,java.xml,java.management,jdk.unsupported" />
+                                    <arg line="--output ${jredir}" />
                                 </exec>
+                            </tasks>
+                        </configuration>
+                    </execution>
 
-                                <property name="targetdir" value="${basedir}/target"/>
-                                <property name="distdir" value="${targetdir}/dist"/>
-                                <delete dir="${distdir}"/>
-                                <copy tofile="${distdir}/opendolphin.jar">
-                                    <fileset
-                                            file="${targetdir}/open.dolphin.client-1.3.0.17-jar-with-dependencies.jar"/>
+                    <!-- make dist folder antrun:run@dist -->
+                    <execution>
+                        <id>dist</id>
+                        <phase>package</phase>
+                        <configuration>
+                            <tasks>
+                                <echo>making dist folder using jpackage</echo>
+                                <property name="targetdir" value="${basedir}/target" />
+                                <property name="distdir" value="${targetdir}/dist" />
+                                <property name="workdir" value="${targetdir}/tmp" />
+                                <property name="jredir" value="${basedir}/appRuntimeImage/jre" />
+
+                                <delete dir="${workdir}" />
+                                <copy tofile="${workdir}/opendolphin.jar">
+                                    <fileset file="${targetdir}/open.dolphin.client-1.3.0.17-jar-with-dependencies.jar" />
                                 </copy>
-                                <copy todir="${distdir}/schema">
+                                <copy todir="${workdir}/schema">
                                     <fileset dir="${basedir}/schema"/>
                                 </copy>
 
-                                <taskdef name="bundleapp"
-                                         classname="com.oracle.appbundler.AppBundlerTask"
-                                         classpath="lib/appbundler-1.0ea.jar"/>
-                                <property environment="env"/>
-                                <property name="icon.name" value="OpenDolphin-ICN.icns"/>
-                                <property name="macosx.app.name" value="OpenDolphin"/>
-
-                                <bundleapp outputdirectory="${distdir}"
-                                           name="${macosx.app.name}"
-                                           displayname="${macosx.app.name}"
-                                           identifier="${macosx.app.name}"
-                                           mainclassname="open.dolphin.client.Dolphin"
-                                           icon="${basedir}/icons/${icon.name}"
-                                           shortversion="${maven.build.timestamp}"
-                                           version="${project.version}-${maven.build.timestamp}">
-
-                                    <!-- include java runtime into pacakge
-                                    <runtime dir="${runtime}"/>
-                                    -->
-                                    <classpath file="${distdir}/opendolphin.jar"/>
-                                    <option value="-Xdock:icon=Contents/Resources/${icon.name}"/>
-                                    <option value="-Dapple.laf.useScreenMenuBar=true"/>
-                                    <option value="-Dcom.apple.macos.use-file-dialog-packages=true"/>
-                                    <option value="-Dcom.apple.macos.useScreenMenuBar=true"/>
-                                    <option value="-Dapple.awt.application.name=${macosx.app.name}"/>
-                                    <option value="-Duser.dir=$APP_ROOT/.."/>
-                                </bundleapp>
-
-                                <copy todir="${distdir}/OpenDolphin.app/Contents/Java/schema">
-                                    <fileset dir="${basedir}/schema"/>
-                                </copy>
-                                <mkdir dir="${distdir}/OpenDolphin.app/Contents/Resources/Japanese.lproj" />
-                            </target>
+                                <delete dir="${distdir}" />
+                                <exec executable="/usr/bin/jpackage">
+                                    <arg line="-n OpenDolphin" />
+                                    <arg line="--type app-image" />
+                                    <arg line="-i ${workdir}/" />
+                                    <arg line="-d ${distdir}" />
+                                    <arg line="--main-jar opendolphin.jar" />
+                                    <arg line="--icon ${basedir}/icons/OpenDolphin-ICN.icns" />
+                                    <arg line="--runtime-image ${jredir}" />
+                                </exec>
+                            </tasks>
                         </configuration>
                     </execution>
                 </executions>
